UHF-2836: Fix spacing to use variables

--- a/src/scss/components/content/_service-channel.scss
+++ b/src/scss/components/content/_service-channel.scss
@@ -190,7 +190,7 @@
     display: block;
 
     & + * {
-      margin-top: 8px;
+      margin-top: $spacing-half;
     }
   }
 }
